tests/030-syntax-error/err.expected
error: broken.ini:1:4: expected "]"
[fu
   ^
